# minisearch

./: Cargo.toml
alexsearch/: metadata.bytes  n_terms.bytes  terms.bytes  urls.bytes
src/: main.rs
templates/: search.html.tera
