[package]
name = "minisearch"
version = "0.1.0"
authors = ["Alex Gajewski <agajews@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["macros", "rt-core", "time", "io-driver", "fs"] }
url = "2.1.1"
reqwest = { version = "0.10.8", features = ["blocking", "native-tls", "trust-dns", "stream"] }
regex = "1.3.9"
http = "0.2.1"
cbloom = "0.1.3"
fasthash = "0.4.0"
